--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Merry Christmas, Happy Holidays" />
 	<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=IM+Fell+Double+Pica:400,400italic' />
-	<link rel='stylesheet' type='text/css' href="/css/stylesheet.css" />
+	<link rel='stylesheet' type='text/css' href="css/stylesheet.css" />
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/angular.js"></script>
 	<script type="text/javascript" src="js/angular-route.js"></script>
